# dongle-software

./: CMakeLists.txt  README.md  reboot_and_flash.py
components/autoreset/: CMakeLists.txt
components/autoreset/include/: autoreset.h
components/autoreset/src/: autoreset.c
components/ble_manager/: CMakeLists.txt
components/ble_manager/include/: ble_manager.h
components/ble_manager/src/: ble_manager.cpp
components/helpers/: CMakeLists.txt
components/helpers/include/: debug_helpers.h  macros.h  tuh_stream_processor.h
components/helpers/src/: debug_helpers.c  tuh_stream_processor.c
components/tinyusb/: CMakeLists.txt
components/tinyusb/src/: tusb_option.h
components/tinyusb/src/class/cdc/: cdc_device.h
components/tinyusb/src/common/: tusb_fifo.c  tusb_verify.h
components/tinyusb/src/device/: usbd.c
components/tinyusb/src/host/: hub.c  usbh.c
components/tinyusb/src/portable/espressif/esp32sx/: dcd_esp32sx.c
components/tinyusb_helpers/: CMakeLists.txt
components/tinyusb_helpers/include/: dfu_helpers.h  hcd_max3421.h  max3421_helpers.h  tusb_config.h  tusb_dfu_ota.h  usb_descriptors.h
components/tinyusb_helpers/src/: dfu_helpers.c  hcd_max3421.c  max3421_helpers.c  tusb_dfu_ota.c  usb_descriptors.c
components/usb_descriptors/: CMakeLists.txt
components/usb_host_cdc_acm/: cdc_acm_host.c
main/: Adafruit_USBH_Host.cpp  Adafruit_USBH_Host.h  CMakeLists.txt  autoreset.c  autoreset.h  descriptors.c  hcd_max3421.c  idf_component.yml  main.cpp  tusb_config.h  tusb_esp32.c
main/include/: main.h
main/src/: main.c  main.cpp
